Alignment fixes and search category text changed

--- a/app/styles/components/_gru-resource-results.scss
+++ b/app/styles/components/_gru-resource-results.scss
@@ -15,7 +15,7 @@
   }
   .gru-resource-card {
     display: inline-block;
-    margin: 10px;
+    margin: 10px 10px 28px 10px;
     text-align: left;
   }
   .no-results-found {
